--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -87,6 +87,7 @@ nav {
 // KU grid:
 
 .gcitem {
+  position: relative;
   &:extend(.clearfix all);
   & + .gcitem {
     margin-top: @grid-gutter-height;
