--- a/docs/assets/css/doctypes/fullwidthfrontpage.css
+++ b/docs/assets/css/doctypes/fullwidthfrontpage.css
@@ -155,7 +155,7 @@ html:lang(en) .ku-branding .ku-branding-text {
 }
 
 @media (max-width: 767px) {
-  /*Target first row*/
+  /*Target first row - make it full width for sliders*/
   .FullWidthFrontpage .main-content .row:first-child .gccolumn.column1 {
     padding-right: 0;
     padding-left: 0;
