--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -638,7 +638,8 @@
     &.size1 {
       .box2 {
         img {
-          object-fit: cover;
+          max-height: none;
+          max-width: 100%;
         }
       }
     }
