--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -1,4 +1,5 @@
 /* Slider */
+
 .slide-wrapper {
   visibility: hidden;
 }
@@ -28,9 +29,8 @@
   margin: 0;
   padding: 0;
   //@media (min-width: @screen-md-min) {
-    height: 100%; // KU
+  height: 100%; // KU
   //}
-
   &:focus {
     outline: none;
   }
@@ -52,9 +52,8 @@
   top: 0;
   display: block;
   //@media (min-width: @screen-md-min) {
-    height: 100%; // KU
+  height: 100%; // KU
   //}
-
   &:after,
   &:before {
     content: "";
@@ -83,11 +82,9 @@
     height: 100%;
     position: relative;
   }
-
   // [dir="rtl"] & {
   //   float: right;
   // }
-
   img {
     display: block;
     max-width: 100%;
@@ -108,7 +105,6 @@
     display: none;
   }
   //display: none;
-
   &.dragging img {
     pointer-events: none;
   }
@@ -135,14 +131,26 @@
 
 .slide-link {
   .states(none);
+  position: relative;
+  @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    display: flex;
+    flex-direction: column;
+    height: inherit;
+  }
+}
+@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+  .slick-slider {
+    .caption {
+      flex-grow: 1;
+      align-self: flex-end;
+    }
+  }
 }
 
 .slick-arrow.slick-hidden {
   display: none;
 }
-
 // Arrows
-
 .slick-arrow {
   z-index: 2;
   font-size: 0;
