--- a/docs/assets/css/doctypes/fullwidthfrontpage.css
+++ b/docs/assets/css/doctypes/fullwidthfrontpage.css
@@ -48,10 +48,10 @@ html:lang(en) .ku-branding .ku-branding-text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+  -ms-flex-direction: row;
+  flex-direction: row;
   position: relative;
   margin-left: 0;
   margin-right: 0;
@@ -158,7 +158,7 @@ html:lang(en) .ku-branding .ku-branding-text {
   }
 }
 
-@media (max-width: 767px) {
+@media screen and (max-width: 767px) {
   /*Target first row - make it full width for sliders*/
   .FullWidthFrontpage .main-content .row:first-child .gccolumn.column1 {
     padding-right: 0;
@@ -169,6 +169,10 @@ html:lang(en) .ku-branding .ku-branding-text {
   .jumpboard {
     padding: 0;
     background: #f8f8f5;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .jumpboard>.jumpcolumn {
     max-height: none;
@@ -202,14 +206,5 @@ html:lang(en) .ku-branding .ku-branding-text {
   }
   .jumpboard .jumpcolumn .jumplinks li a:active, .jumpboard .jumpcolumn .jumplinks li a:hover, .jumpboard .jumpcolumn .jumplinks li a:focus {
     background-color: #f1f1f1;
-  }
-}
-
-@media (min-width: 768px) {
-  .jumpboard {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
   }
 }
