--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -117,6 +117,10 @@ h2 code, h3 code, h4 code {
   display: inline-block;
 }
 
+[data-example-id="img-with-captions"], [data-example-id="img-with-captions-aligned"] {
+  overflow: hidden;
+}
+
 /*
  * Fancy skip link
  *
@@ -860,7 +864,7 @@ h1[id] {
   float: none;
   padding: 45px 15px 15px;
   margin: 0 -15px 15px;
-  overflow: hidden;
+  /* overflow: hidden; */
   clear: both;
   border-color: #e5e5e5 #eee #eee;
   border-style: solid;
