--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -98,7 +98,7 @@ figcaption {
   font-size: @figure-caption-font-size;
   color: @gray-light;
   border-bottom: 1px solid @figure-caption-border-color;
-  padding-bottom: 10px;
+  padding-bottom: 10px 10px 10px 0;
   width: 100%;
   display: table-caption;
   caption-side: bottom;
