--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -42,10 +42,10 @@ figure {
   display: table;
   clear: both;
 
-  &.image {
-    // Makes figcaption fit image width
-    width: 1px;
-  }
+  // &.image {
+  //   // Makes figcaption fit image width
+  //   width: 1px;
+  // }
 
   &.align-left,
   &.pull-left {
