--- a/docs/_includes/local-footer.html
+++ b/docs/_includes/local-footer.html
@@ -21,7 +21,7 @@
         Support: <abbr title="Tlf.">tlf:</abbr> 353 22700
         {% else %}
         Kommunikation<br>
-        <a href="mailto:kommunikation@adm.ku.dk">kommunikation@adm.ku.dk</a><br>
+        E-mail: <a href="mailto:FA-webredaktor@adm.ku.dk">Web team</a><br>
         <abbr title="Tlf.">Tlf:</abbr> <a href="tel:+4535324261">+45 35 32 42 61</a>
         {% endif %}
       </address>
