--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -38,7 +38,7 @@
 .figure,
 figure {
   // Ensures the caption's text aligns with the image.
-  margin: 0;
+  margin: 5px 0;
   display: table;
   clear: both;
 
