--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -119,6 +119,13 @@
 .readAll {
   margin-bottom: 0;
 }
+.cal-sorting {
+  .input-group {
+    &.date {
+      border-collapse: collapse;
+    }
+  }
+}
 // Search news forms
 
 .search-news {
