--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -476,13 +476,6 @@
         }
       }
     }
-    &.img-left, &.img-right {
-      .box2 {
-        img {
-          width: 100%;
-        }
-      }
-    }
   }
   // Height 81px
   &.size4 {
@@ -520,6 +513,7 @@
 /*
 * Mobile: All column types must behave like single column boxes
 */
+
 .gcrow .gccolumn .gridbox {
   .all-single-column();
 
@@ -611,6 +605,16 @@
           img {
             max-height: none;
             max-width: 100%;
+            height: 100%;
+          }
+        }
+      }
+
+      &.img-left,
+      &.img-right {
+        .box2 {
+          img {
+            width: 100%;
           }
         }
       }
