--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -54,7 +54,6 @@
       width: auto;
       margin-top: 0;
       padding: 10px 15px;
-      text-align: center;
     }
 
     & > a {
@@ -63,7 +62,7 @@
         display: inline-flex;
       }
       font-size: 15px;
-      padding-left: 18px;
+      padding: 0 18px;
       align-items: center;
       letter-spacing: 0.06em;
       line-height: 20px;
@@ -95,6 +94,7 @@
         .icon;
         text-transform: none;
         color: @ku-red;
+        text-decoration: none;
 
         .theme-samf & {
           color: @samf;
