--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -587,6 +587,19 @@
     }
   }
 }
+@media (max-width: @screen-xs) {
+  .gridbox {
+    &.size3 {
+      &.with-img {
+        .box2 {
+          img {
+            height: 100%;
+          }
+        }
+      }
+    }
+  }
+}
 @media (max-width: @screen-xs-max) {
   .gridbox {
     &.size1 {
@@ -605,7 +618,6 @@
           img {
             max-height: none;
             max-width: 100%;
-            height: 100%;
           }
         }
       }
