--- a/less/input-groups.less
+++ b/less/input-groups.less
@@ -76,7 +76,8 @@
 // -------------------------
 .input-group-addon {
   padding: @padding-base-vertical @padding-base-horizontal;
-  font-size: @font-size-base;
+  // font-size: @font-size-base;
+  font-size: 14px;;
   font-weight: normal;
   line-height: 1;
   color: @input-color;
