--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -4,6 +4,9 @@
 
 .local-footer {
   align-self: flex-end;
+  font-size: .85em;
+  line-height: 1.43em;
+  color: @gray-light;
   @media (max-width: @screen-xs-max) {
     padding: 0 @grid-gutter-by-half;
   }
