--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -95,7 +95,7 @@
         </li>
       </ul>
       <form class="navbar-form navbar-right search_form search_reset global-search" role="search">
-        <div class="input-group">
+        <div class="input-group input-group-sm">
           <input class="form-control global-search-query" type="text" placeholder="Søg..." aria-label="Inputfelt til søgeord">
           <div class="input-group-btn btn-global-search">
             <button type="button" class="btn btn-default dropdown-toggle global-search-options-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hele KU <span class="sr-only">Vis søgemuligheder</span></button>
