--- a/less/variables.less
+++ b/less/variables.less
@@ -12,6 +12,7 @@
 @gray-dark:              #252525;
 @gray:                   #ccc;
 @gray-light:             #777;
+@gray-444:               #444;
 @gray-666:               #666;
 @gray-888:               #888;
 @gray-999:               #999;
