Fix for Obvius backend

--- a/less/forms.less
+++ b/less/forms.less
@@ -53,8 +53,12 @@ input[type="search"] {
 // Position radios and checkboxes better
 input[type="radio"],
 input[type="checkbox"] {
-  margin: 2px 0 0;
-  margin-top: 1px \9; // IE8-9
+  margin-top: 2px;
+  margin-right: 2px;
+  margin-bottom: 0;
+  margin-left: 0;
+  //margin: 2px 0 0;
+  //margin-top: 1px \9; // IE8-9
   line-height: normal;
 }
 
