--- a/less/normalize.less
+++ b/less/normalize.less
@@ -22,9 +22,9 @@ html {
  * Remove the margin in all browsers (opinionated).
  */
 
-// body {
-//   margin: 0;
-// }
+body {
+  margin: 0;
+}
 
 /**
  * Add the correct display in IE 9-.
