--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -132,9 +132,9 @@
   }
 
   .search-news-query {
-    flex: 1 0 210px;
     @media only screen and (min-width: @screen-sm-max) {
       height: 100%;
+      width: 85px;
     }
   }
 
