--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -134,7 +134,7 @@
   .search-news-query {
     @media only screen and (min-width: @screen-sm-max) {
       height: 100%;
-      width: 85px;
+      width: auto;
     }
   }
 
