--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -62,6 +62,7 @@
                     <div class="small">7. marts 2017</div>
                 </li>
                 <li><a href="https://nyheder.ku.dk/">Alle nyheder</a></li>
+                <li><a href="https://nyheder.ku.dk/presseservice/">Alle nyheder</a></li>
             </ul>
         </li>
         <li class="dropdown">
