--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -84,6 +84,9 @@
   <script src="{{ site.baseurl }}/assets/js/datatables/datatables.js"></script>
   {% endif %}
 {% endif %}
+{% if page.category == "slider" %}
+<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+{% endif %}
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
