--- a/docs/assets/css/datatables/datatables.css
+++ b/docs/assets/css/datatables/datatables.css
@@ -18,12 +18,19 @@
     font-weight: normal;
 }
 .dataTable {
+  font-size: 14px;
   clear: both;
   margin-top: 6px !important;
   margin-bottom: 6px !important;
   max-width: none !important;
   /*border-collapse: separate !important;*/
 }
+@media screen and (min-width: 768px) {
+    .dataTable {
+        font-size:12px;
+    }
+}
+
 .dataTable>tbody>tr:hover {
   background-color: #f5f5f5;
 }
@@ -359,6 +366,11 @@ html:lang(en) .dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:aft
 .dataTable>tbody>tr.child {
   padding: 0.5em 1em;
   background-color: #fff;
+  border: 1px solid #ddd;
+}
+.dataTable>tbody>tr.parent + tr.child {
+  /* KU: Open table row */
+  border: 1px solid #ddd;
 }
 
 .dataTable>tbody>tr.child:hover {
