--- a/docs/assets/css/datatables/datatables.css
+++ b/docs/assets/css/datatables/datatables.css
@@ -18,19 +18,12 @@
     font-weight: normal;
 }
 .dataTable {
-  font-size: 14px;
   clear: both;
   margin-top: 6px !important;
   margin-bottom: 6px !important;
   max-width: none !important;
   /*border-collapse: separate !important;*/
 }
-@media screen and (min-width: 768px) {
-    .dataTable {
-        font-size:12px;
-    }
-}
-
 .dataTable>tbody>tr:hover {
   background-color: #f5f5f5;
 }
@@ -368,7 +361,7 @@ html:lang(en) .dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:aft
   background-color: #fff;
   border: 1px solid #ddd;
 }
-.dataTable>tbody>tr.parent + tr.child {
+.dataTable>tbody>tr.parent {
   /* KU: Open table row */
   border: 1px solid #ddd;
 }
