--- a/less/tables.less
+++ b/less/tables.less
@@ -8,11 +8,11 @@ table {
   border-collapse: collapse;
 
   // KU:
-  @media (max-width: @screen-sm-min) {
-    html:not(.non-responsive) & {
-      font-size: @font-size-base;
-    }
-  }
+  // @media (max-width: @screen-sm-min) {
+  //   html:not(.non-responsive) & {
+  //     font-size: @font-size-base;
+  //   }
+  // }
 }
 caption {
   padding-top: @table-cell-padding;
