--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -83,6 +83,9 @@ nav {
 
 .right-side {
   .pull-right;
+  .flexiblebox-as-rightbox:first-child {
+    margin-top: @grid-gutter-height;
+  }
 }
 // KU grid:
 
