--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -43,7 +43,7 @@ body {
   flex-direction: column;
   height: 100%;
   position: relative;
-  @media (max-width: @screen-sm-min) {
+  @media (max-width: @screen-xs-max) {
     -webkit-overflow-scrolling: touch;
     html:not(.non-responsive) & {
       font-size: @font-size-large;
