--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -644,7 +644,7 @@
     }
   }
 }
-@media (min-width: @screen-xs-min) and (max-width: @screen-sm-max) {
+@media (min-width: @screen-xs-min) and (max-width: @screen-sm) {
   // Tablet
   .gridbox {
     .img-text-aligned();
