--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -53,8 +53,10 @@ nav {
     //     margin-top: @grid-gutter-height;
     //   }
     // }
-    [class^="col-"][class$="-12"] {
-      margin-top: @grid-gutter-height;
+    [class^="col-"][class$="-12"] + {
+      [class^="col-"][class$="-12"] {
+        margin-top: @grid-gutter-height;
+      }
     }
   }
 }
@@ -249,6 +251,7 @@ nav {
   width: device-width;
 }
 // Global scroll to top
+
 .scrolltop {
   position: fixed;
   bottom: 3%;
