--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -53,8 +53,8 @@ nav {
     //     margin-top: @grid-gutter-height;
     //   }
     // }
-    [class^="col-"][class$="-12"] + {
-      [class^="col-"][class$="-12"] {
+    [class^="col-"][class$="-12"] {
+      &+ [class^="col-"][class$="-12"] {
         margin-top: @grid-gutter-height;
       }
     }
