--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -48,16 +48,16 @@ nav {
     }
   }
   @media (max-width: @screen-sm-max) {
-    // [class*="col-"] {
-    //   + [class*="col-"] {
-    //     margin-top: @grid-gutter-height;
-    //   }
-    // }
-    [class^="col-"][class$="-12"] {
-      &+ [class^="col-"][class$="-12"] {
+    [class*="col-"] {
+      + [class*="col-"] {
         margin-top: @grid-gutter-height;
       }
     }
+    // [class^="col-"][class$="-12"] {
+    //   &+ [class^="col-"][class$="-12"] {
+    //     margin-top: @grid-gutter-height;
+    //   }
+    // }
   }
 }
 
