--- a/less/type.less
+++ b/less/type.less
@@ -398,7 +398,7 @@ address {
 
 h2 {
   &.deloverskrift {
-    font-size: 1.85em;
+    font-size: 22px;
     line-height: 1.2;
     letter-spacing: 0.7px;
     margin: 0;
