--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -966,10 +966,12 @@
 
             .header {
               padding: 8px 0 8px 10px;
-              overflow: hidden;
               font-size: 1.1em;
-              white-space: nowrap;
-              border-right: 25px solid transparent;
+              @media (min-width: @screen-xs) and (max-width: @screen-xs-max) {
+                border-right: 25px solid transparent;
+                white-space: nowrap;
+                overflow: hidden;
+              }
             }
 
             .box1 {
@@ -981,7 +983,7 @@
             }
 
             .box2 {
-              flex: 0 1 235px;
+              flex: 0 0 @gridbox3;
             }
 
             &::before {
