--- a/less/mixins/ku-gridbox-mixins.less
+++ b/less/mixins/ku-gridbox-mixins.less
@@ -44,9 +44,11 @@
 
         .header {
           width: 100%;
-          border-right: 25px solid transparent;
-          white-space: nowrap;
-          overflow: hidden;
+          @media (min-width: @screen-xs) and (max-width: @screen-xs-max) {
+            border-right: 25px solid transparent;
+            white-space: nowrap;
+            overflow: hidden;
+          }
         }
       }
 
@@ -126,7 +128,7 @@
       }
 
       .box2 {
-        flex: 0 1 235px;
+        flex: 0 0 @gridbox3;
         order: 1;
       }
     }
