--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -495,11 +495,6 @@
   &.size5 {
     height: @gridbox5;
 
-    .box1 {
-      .header {
-        padding-bottom: 4px;
-      }
-
       .text {
         display: none;
       }
@@ -983,7 +978,7 @@
             }
 
             .box2 {
-              flex: 0 0 @gridbox3;
+              flex: 0 1 235px;
             }
 
             &::before {
