--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -495,6 +495,11 @@
   &.size5 {
     height: @gridbox5;
 
+    .box1 {
+      .header {
+        padding-top: 6px;
+      }
+
       .text {
         display: none;
       }
@@ -962,6 +967,9 @@
             .header {
               padding: 8px 0 8px 10px;
               font-size: 1.1em;
+              border-right: 0;
+              white-space: normal;
+              overflow: auto;
               @media (min-width: @screen-xs) and (max-width: @screen-xs-max) {
                 border-right: 25px solid transparent;
                 white-space: nowrap;
