--- a/less/mixins/ku-gridbox-mixins.less
+++ b/less/mixins/ku-gridbox-mixins.less
@@ -44,6 +44,9 @@
 
         .header {
           width: 100%;
+          border-right: 0;
+          white-space: normal;
+          overflow: auto;
           @media (min-width: @screen-xs) and (max-width: @screen-xs-max) {
             border-right: 25px solid transparent;
             white-space: nowrap;
