--- a/less/navbar.less
+++ b/less/navbar.less
@@ -892,7 +892,7 @@
   }
 
   .global-search-query {
-    // Global search input width:
+    // Global search input:
     width: 170px!important;
   }
 
