--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -100,3 +100,9 @@ figcaption {
   display: table-caption;
   caption-side: bottom;
 }
+
+.fritekst_over_img {
+  // Hack to hide titles i rightboxes
+  position: absolute;
+  margin-top: -39px;
+}
