--- a/docs/assets/css/social-feeds/instagram.css
+++ b/docs/assets/css/social-feeds/instagram.css
@@ -1,13 +1,12 @@
 /* CSS for Instagram feeds stacked in batches of 1-6 images rotating
 Needs html like this:
-<div id="ig" data-account="university_of_copenhagen" data-token="xxxx" data-images="3" class="gridbox with-img subcolor_6 size2">
+<div id="ig" data-account="university_of_copenhagen" data-token="xxxx" data-images="3" class="gridbox with-img  size2">
   <div class="box1">
   <a href="https://www.instagram.com/university_of_copenhagen/">
     <div class="header">@university_of_copenhagen på Instagram</div>
   </a>
   </div>
   <div class="ig_box2">
-    <div class="ku-loading"></div>
     <div id="imageBox"></div>
   </div>
 </div>
@@ -43,6 +42,11 @@ Needs html like this:
   background: rgba(255, 255, 255, .9);
 }
 
+#ig:hover a {
+  color: inherit;
+  display: block;
+}
+
 #imageBox {
   width: 100%;
   height: 185px;
@@ -60,7 +64,6 @@ Needs html like this:
 }
 
 #imageBox .batch a {
-  display: block;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
