--- a/docs/assets/css/social-feeds/instagram.css
+++ b/docs/assets/css/social-feeds/instagram.css
@@ -20,7 +20,7 @@ Needs html like this:
   visibility: hidden;
 }
 
-#ig.gridbox.subcolor_6::before {
+#ig.gridbox::before {
   z-index: 101;
   cursor: pointer;
 }
@@ -47,6 +47,11 @@ Needs html like this:
   display: block;
 }
 
+#ig:hover img {
+  -webkit-filter: none;
+  filter: none;
+}
+
 #imageBox {
   width: 100%;
   height: 185px;
@@ -68,15 +73,18 @@ Needs html like this:
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  position: relative;
 }
 
 #imageBox .batch img {
   margin: 0 auto;
-  height: 100% !important;
-  min-width: 120%;
-  width: auto !important;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translateY(-50%) translateX(-50%) translate3d(0, 0, 0);
+  transform: translateY(-50%) translateX(-50%) translate3d(0, 0, 0);
   object-fit: cover;
-  object-position: center;
+  border: 1px solid #fff;
 }
 
 #imageBox .batch .inner {
@@ -94,22 +102,6 @@ Needs html like this:
   overflow: hidden;
 }
 
-@media screen and (min-width: 481px) {
-  #imageBox .batch img {
-    height: 112% !important;
-    min-width: none;
-    width: 100%;
-    border: 1px solid #fff
-  }
-}
-
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  .instagram-box .batch img {
-    width: auto;
-    max-width: none;
-  }
-}
-
 @media screen and (max-width: 480px) {
   #imageBox .batch .inner {
     display: block;
@@ -122,7 +114,8 @@ Needs html like this:
     flex: none;
   }
 
-  #imageBox .batch a img {
+  #imageBox .batch img {
     height: 100%;
+    border: 0;
   }
 }
