--- a/docs/assets/css/social-feeds/instagram.css
+++ b/docs/assets/css/social-feeds/instagram.css
@@ -12,8 +12,6 @@ Needs html like this:
 </div>
 */
 #ig.gridbox {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
@@ -30,7 +28,6 @@ Needs html like this:
   bottom: 0;
   left: 0;
   width: 100%;
-  -webkit-box-flex: 0;
   -webkit-flex: none;
   -ms-flex: none;
   flex: none;
@@ -69,7 +66,6 @@ Needs html like this:
 }
 
 #imageBox .batch a {
-  -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
@@ -88,11 +84,9 @@ Needs html like this:
 }
 
 #imageBox .batch .inner {
-  display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
@@ -108,13 +102,13 @@ Needs html like this:
   }
 
   #imageBox .batch a {
-    -webkit-box-flex: 0;
     -webkit-flex: none;
     -ms-flex: none;
     flex: none;
   }
 
   #imageBox .batch img {
+    position: relative;
     height: 100%;
     border: 0;
   }
