--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -524,7 +524,7 @@
     }
   }
 }
-@media (max-width: @screen-xs-min) {
+@media (max-width: @screen-xs) {
   .gridbox {
     .text {
       display: none;
@@ -620,7 +620,7 @@
     }
   }
 }
-@media (min-width: @screen-xs-min) and (max-width: @screen-xs-max) {
+@media (min-width: @screen-xs) and (max-width: @screen-xs-max) {
   // Tablet
   .gridbox {
     .img-text-aligned();
@@ -722,7 +722,18 @@
     }
   }
 }
-@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+// @media (min-width: @screen-xs) and (max-width: @screen-sm-max) {
+//   .gridbox {
+//     &.size2, &.size3 {
+//       &.with-img {
+//         .box1 {
+//           position: initial;
+//         }
+//       }
+//     }
+//   }
+// }
+@media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
   // Tablet: For full-width frontpage only
   .FullWidthFrontpage {
     .col-sm-6,
@@ -747,7 +758,7 @@
     }
   }
 }
-@media (min-width: @screen-md-min) {
+@media (min-width: @screen-md) {
   //Frontpage only
   .one-one-two-column .column1,
   .one-one-two-column .column2,
