--- a/less/mixins/ku-gridbox-mixins.less
+++ b/less/mixins/ku-gridbox-mixins.less
@@ -47,20 +47,20 @@
           border-right: 25px solid transparent;
           white-space: nowrap;
           overflow: hidden;
-          @media (min-width: @screen-xs) and (max-width: @screen-xs-max) {
-            border-right: 0;
-            white-space: normal;
-            overflow: auto;
-          }
+          // @media (min-width: @screen-xs) and (max-width: @screen-xs-max) {
+          //   border-right: 0;
+          //   white-space: normal;
+          //   overflow: auto;
+          // }
         }
       }
 
       &.outlined {
         .box1 {
           position: absolute;
-          @media (min-width: @screen-xs) and (max-width: @screen-xs-max) {
-            position: initial;
-          }
+          // @media (min-width: @screen-xs) and (max-width: @screen-xs-max) {
+          //   position: initial;
+          // }
           left: 0;
           bottom: 0;
           width: 100%;
