--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -620,7 +620,7 @@
     }
   }
 }
-@media (min-width: @screen-xs) and (max-width: @screen-xs-max) {
+@media (min-width: @screen-xs) and (max-width: @screen-sm-max) {
   // Tablet
   .gridbox {
     .img-text-aligned();
@@ -722,20 +722,17 @@
     }
   }
 }
-@media (min-width: @screen-xs) and (max-width: @screen-sm-max) {
-  .gridbox {
-    .img-text-aligned();
-  }
-  // .gridbox {
-  //   &.size2, &.size3 {
-  //     &.with-img {
-  //       .box1 {
-  //         position: initial;
-  //       }
-  //     }
-  //   }
-  // }
-}
+// @media (min-width: @screen-xs) and (max-width: @screen-sm-max) {
+//   .gridbox {
+//     &.size2, &.size3 {
+//       &.with-img {
+//         .box1 {
+//           position: initial;
+//         }
+//       }
+//     }
+//   }
+// }
 @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
   // Tablet: For full-width frontpage only
   .FullWidthFrontpage {
