--- a/less/mixins/ku-gridbox-mixins.less
+++ b/less/mixins/ku-gridbox-mixins.less
@@ -123,7 +123,7 @@
       .box1 {
         flex: 1;
         order: 2;
-        position: initial;
+        position: initial!important;
 
         .header {
           position: relative;
